# cuda-oxide

./: .dockerignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
.github/workflows/: cargo-deny.yml  ci.yml  clippy.yml  fmt.yml  unit-tests.yml
crates/cargo-oxide/: README.md
crates/cargo-oxide/src/: commands.rs  main.rs
crates/cuda-async/: README.md
crates/cuda-async/src/: device_box.rs  device_future.rs  device_operation.rs
crates/cuda-core/: README.md
crates/cuda-core/src/: device_buffer.rs  module.rs
crates/cuda-core/tests/: device_buffer.rs  device_copy_derive.rs
crates/cuda-core/tests/derive_device_copy/: fail_enum.rs  fail_enum.stderr  pass_union.rs
crates/cuda-device/src/: debug.rs  lib.rs  warp.rs
crates/cuda-host/src/: launch.rs  lib.rs  type_id.rs
crates/cuda-host/tests/: cuda_module_api.rs
crates/cuda-macros/: README.md
crates/cuda-macros/src/: device_copy.rs  lib.rs
crates/dialect-llvm/src/: export.rs
crates/dialect-llvm/src/ops/: control_flow.rs
crates/dialect-llvm/tests/: export_test.rs
crates/dialect-mir/src/: rust_intrinsics.rs
crates/dialect-mir/src/ops/: control_flow.rs
crates/dialect-nvvm/src/ops/: warp.rs
crates/dialect-nvvm/tests/: ops_test.rs
crates/llvm-export/: README.md
crates/llvm-export/src/: lib.rs
crates/llvm-export/src/export/: ops.rs  state.rs
crates/mir-importer/: README.md
crates/mir-importer/src/: pipeline.rs
crates/mir-importer/src/translator/: rvalue.rs  statement.rs  types.rs  values.rs
crates/mir-importer/src/translator/terminator/: mod.rs
crates/mir-importer/src/translator/terminator/intrinsics/: atomic.rs  clc.rs  cluster.rs  debug.rs  float_math.rs  indexing.rs  memory.rs  sync.rs  tma.rs  warp.rs  wgmma.rs
crates/mir-lower/src/: lowering.rs
crates/mir-lower/src/convert/: interface_impls.rs  types.rs
crates/mir-lower/src/convert/intrinsics/: clc.rs  common.rs  convert.rs  debug.rs  mbarrier.rs  tcgen05.rs  warp.rs
crates/mir-lower/src/convert/ops/: arithmetic.rs  call.rs  memory.rs
crates/mir-lower/tests/: lowering_test.rs
crates/reserved-oxide-symbols/src/: lib.rs
crates/rustc-codegen-cuda/: Cargo.toml
crates/rustc-codegen-cuda/examples/abi_hmm/src/: main.rs
crates/rustc-codegen-cuda/examples/addressof_sharedarray_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/addressof_sharedarray_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/array_constants/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_constants/src/: main.rs
crates/rustc-codegen-cuda/examples/atomic_f16/src/: main.rs
crates/rustc-codegen-cuda/examples/atomics/: README.md
crates/rustc-codegen-cuda/examples/bool_phi_cmp/: Cargo.toml
crates/rustc-codegen-cuda/examples/cluster/src/: main.rs
crates/rustc-codegen-cuda/examples/compiler_features/src/: main.rs
crates/rustc-codegen-cuda/examples/constant_memory_coeffs/src/: main.rs
crates/rustc-codegen-cuda/examples/constant_memory_simple/src/: main.rs
crates/rustc-codegen-cuda/examples/copy_nonoverlapping/src/: main.rs
crates/rustc-codegen-cuda/examples/cross_crate_kernel/: README.md
crates/rustc-codegen-cuda/examples/elect_leader/: Cargo.toml
crates/rustc-codegen-cuda/examples/elect_leader/src/: main.rs
crates/rustc-codegen-cuda/examples/host_closure/src/: main.rs
crates/rustc-codegen-cuda/examples/libm_math/: Cargo.toml
crates/rustc-codegen-cuda/examples/libm_math/src/: main.rs
crates/rustc-codegen-cuda/examples/mathdx_ffi_test/src/: main.rs
crates/rustc-codegen-cuda/examples/place_read_fallbacks/: Cargo.toml
crates/rustc-codegen-cuda/examples/place_read_fallbacks/src/: main.rs
crates/rustc-codegen-cuda/examples/projected_place_read/: Cargo.toml
crates/rustc-codegen-cuda/examples/projected_place_read/src/: main.rs
crates/rustc-codegen-cuda/examples/tma_multicast/src/: main.rs
crates/rustc-codegen-cuda/src/: collector.rs
cuda-oxide-book/appendix/: building-from-source.md  glossary.md  supported-features.md
cuda-oxide-book/compiler/: lowering-pipeline.md  pliron.md  rustc-codegen-cuda.md
cuda-oxide-book/getting-started/: hello-gpu.md  installation.md
cuda-oxide-book/gpu-programming/: closures-and-generics.md  kernels-and-device-functions.md  launching-kernels.md  memory-and-data-movement.md
scripts/: smoketest.sh
