#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "array_constants"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression coverage for MIR import of array constants:
# - bare `[T; N]` constants indexed by runtime value,
# - nested `[[T; M]; N]` constants,
# - existing pointer-to-array constants (`&[T; N]`).
#
# Run with:
#   cargo oxide run array_constants

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
