[package]
name = "elect_leader"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates Hopper's single-instruction warp leader election
# `elect.sync` (sm_90+) via `warp::elect_sync` / `warp::is_elected_sync`.
# Build with:
#   cargo oxide run elect_leader

[dependencies]
# Device-side intrinsics (warp::elect_sync, warp::is_elected_sync, ...)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
