[package]
name = "libm_math"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Feature example for PR #142: kernels calling `libm` crate float
# functions (the path glam's `nostd-libm` feature emits on nvptx).
# Each call site is intercepted by mir-importer's float-math dispatch
# and lowered to the matching libdevice intrinsic (__nv_sinf,
# __nv_expf, ...); the libm crate's software-float bodies are never
# translated.
#
# Run with:
#   cargo oxide run libm_math

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
libm = "0.2"
